@@ -47,7 +47,6 @@ const char *QuestEventSubroutines[_LargestEventID] = {
 	"EVENT_AGGRO",
 	"EVENT_SLAY",
 	"EVENT_NPC_SLAY",
-	"EVENT_WAYPOINT",
 	"EVENT_WAYPOINT_ARRIVE",
 	"EVENT_WAYPOINT_DEPART",
 	"EVENT_TIMER",
@@ -537,7 +536,6 @@ void PerlembParser::EventCommon(QuestEventID event, int32 objid, const char * da
 			perl->eval(std::string("++$").append(hashname).append("{$").append(packagename).append("::item4};").c_str());
 			break;
 		}
-		case EVENT_WAYPOINT:
 		case EVENT_WAYPOINT_ARRIVE:
 		case EVENT_WAYPOINT_DEPART: {
 			ExportVar(packagename.c_str(), "wp", data);
